# serializer version: 1
# name: test_switch_entity[hacs-test-org/appdaemon-basic][entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'switch',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'switch.appdaemon_basic_pre_release',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-release',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-release',
    'platform': 'marketplace',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre-release',
    'unique_id': '1296265',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entity[hacs-test-org/integration-basic][entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'switch',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'switch.basic_integration_pre_release',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-release',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-release',
    'platform': 'marketplace',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre-release',
    'unique_id': '1296269',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entity[hacs-test-org/plugin-basic][entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'switch',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'switch.plugin_basic_pre_release',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-release',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-release',
    'platform': 'marketplace',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre-release',
    'unique_id': '1296267',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entity[hacs-test-org/python_script-basic][entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'switch',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'switch.python_script_basic_pre_release',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-release',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-release',
    'platform': 'marketplace',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre-release',
    'unique_id': '1296262',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entity[hacs-test-org/template-basic][entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'switch',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'switch.template_basic_pre_release',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-release',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-release',
    'platform': 'marketplace',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre-release',
    'unique_id': '1296268',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entity[hacs-test-org/theme-basic][entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': <RegistryEntryDisabler.INTEGRATION: 'integration'>,
    'domain': 'switch',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'switch.theme_basic_pre_release',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Pre-release',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Pre-release',
    'platform': 'marketplace',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'pre-release',
    'unique_id': '1296266',
    'unit_of_measurement': None,
  })
# ---
